--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -2,3 +2,4 @@
 <h2>{{ 100 + 10 +1}}</h2>
 <h3>{{ fromParent }}</h3>
 <app-post-list [fromPost]='parentPost' [fromPost2]='newParentPost' [totalPosts]='totalParentPosts'></app-post-list>
+<button (click)="sendMessage()">Send message to parent</button>
