--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,3 +16,6 @@
 
 <img [src]="imgUrl" alt="">
 
+<h1 [class.text-red] = "bool">Red color only if  bool var is true</h1>
+<h1 [class.text-red] = "!bool">Red color only if  bool var is true</h1>
+
