--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,4 +18,6 @@
 
 <h1 [class.text-red] = "bool">Red color only if  bool var is true</h1>
 <h1 [class.text-red] = "!bool">Red color only if  bool var is true</h1>
+<h1 [style.color]=" bool? 'red' : 'blue' "> Style Binding</h1>
+<h1 [style.color]=" !bool? 'red' : 'blue' "> Style Binding</h1>
 
