--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,8 +62,10 @@
 <input type="text" [(ngModel)]="messageStr" (keyup)="onKeyUp7()" >
 <h4>{{message}}</h4>
 -->
+<!--
 <app-task></app-task>
-
+-->
+<app-directives></app-directives>
 
 
 
