--- a/src/app/directives/directives.component.html
+++ b/src/app/directives/directives.component.html
@@ -12,11 +12,16 @@
 <br>
 <p>Feching Objet Array</p>
 
+<button (click)="addNew();">Add new data</button>
 <u>
   <li *ngFor="let post of objArray">{{post | json}}</li>
 </u>
 <br>
 
 <u>
-  <li *ngFor="let post of objArray">{{post.postTitle}}</li>
+  <li *ngFor="let post of objArray">
+    {{post.postTitle}}
+    <button (click)="onDelete(post);">Delete</button>
+
+  </li>
 </u>
