--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,9 +64,10 @@
 -->
 <!--
 <app-task></app-task>
--->
-<app-directives></app-directives>
 
+<app-directives></app-directives>
+-->
+<app-task-directives></app-task-directives>
 
 
 
