--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,8 +66,10 @@
 <app-task></app-task>
 
 <app-directives></app-directives>
--->
+
 <app-task-directives></app-task-directives>
+-->
+<app-pipes></app-pipes>
 
 
 
