--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,8 +68,10 @@
 <app-directives></app-directives>
 
 <app-task-directives></app-task-directives>
--->
+
 <app-pipes></app-pipes>
+-->
+<app-post></app-post>
 
 
 
