--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,5 +1,13 @@
+<!--
 <h1>{{ title }}</h1>
 <h2>{{ 100 + 10 +1}}</h2>
 <h3>{{ fromParent }}</h3>
 <app-post-list [fromPost]='parentPost' [fromPost2]='newParentPost' [totalPosts]='totalParentPosts'></app-post-list>
 <button (click)="sendMessage()">Send message to parent</button>
+-->
+<h1>Servies</h1>
+<ul>
+  <li *ngFor = 'let post of posts'>
+    {{post.postTitle}}
+  </li>
+</ul>
