--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,7 +1,15 @@
+<!--
 <p>post-list works!</p>
 <h3>{{ fromPost }}</h3>
 <h3>{{ fromPost2 }}</h3>
 <h3>{{ totalPosts }}</h3>
+-->
 
+<h1>Post List Component</h1>
+<ul>
+  <li *ngFor="let post of postList">
+    {{post.postTitle}}
+  </li>
+</ul>
 
 
